# wgdisc

./: .gitignore  Cargo.toml  README.md  wgdisc-client@.service  wgdisc-server.service
arch/: PKGBUILD
src/: cidr.rs  client.rs  main.rs  rpc.rs  server.rs  wireguard.rs
