[package]
name = "wgdisc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.0", default-features = false, features = ["std", "help"] }
mio = { version = "0.8.8", default-features = false, features = ["os-poll"] }
