[package]
name = "wgdisc"
version = "0.1.0"
edition = "2021"
description = "Wireguard peer discovery client/server"
license = "GPL-3-0"
authors = ["Raphael Catolino"]

[package.metadata.deb]
depends = [ "wireguard" ]
assets = [
    ["wgdisc-client@.service", "usr/lib/systemd/system/", "644"],
    ["wgdisc-server.service", "usr/lib/systemd/system/", "644"],
    ["README.md", "usr/share/doc/wgdisc/", "444"],
    ["target/release/wgdisc", "usr/bin/", "755"],
]

[profile.release]
strip = "debuginfo"
opt-level = 2
lto = "thin"
overflow-checks = true

[dependencies]
wireguard-uapi = { version = "0.1", git = "https://github.com/rcatolino/wireguard-uapi", features = ["serde", "mio", "display"] }
base64_light = { version = "=0.1.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.0", default-features = false, features = ["std", "help"] }
mio = { version = "0.8.8", default-features = false, features = ["os-poll", "net"] }
nix = { version = "0.27", default-features = false, features = ["net"] }
